option('platform', type: 'combo',
  choices: ['desktop', 'web', 'android', 'drm', 'sdl', 'rgfw'],
  value: 'desktop',
  description: 'Target platform')

option('graphics', type: 'combo',
  choices: ['default', 'opengl33', 'opengl43', 'opengles2', 'opengles3', 'software'],
  value: 'default',
  description: 'Graphics API')

option('glfw_backend', type: 'combo',
  choices: ['x11', 'wayland'],
  value: 'x11',
  description: 'GLFW backend on Linux (X11 or Wayland)')

option('use_external_glfw', type: 'boolean', value: false,
  description: 'Use system GLFW instead of bundled')

option('use_audio', type: 'boolean', value: true,
  description: 'Build with audio module')

option('support_module_rshapes', type: 'boolean', value: true,
  description: 'Support module rshapes')
option('support_module_rtextures', type: 'boolean', value: true,
  description: 'Support module rtextures')
option('support_module_rtext', type: 'boolean', value: true,
  description: 'Support module rtext')
option('support_module_rmodels', type: 'boolean', value: true,
  description: 'Support module rmodels')
option('support_module_raudio', type: 'boolean', value: true,
  description: 'Support module raudio')
option('support_tracelog', type: 'boolean', value: true,
  description: 'Support tracelog')
option('support_camera_system', type: 'boolean', value: true,
  description: 'Support camera system')
option('support_gestures_system', type: 'boolean', value: true,
  description: 'Support gestures system')
option('support_compression_api', type: 'boolean', value: true,
  description: 'Support compression API')
option('support_automation_events', type: 'boolean', value: true,
  description: 'Support automation events')

option('support_fileformat_tga', type: 'boolean', value: false,
  description: 'Support TGA format')
option('support_fileformat_jpg', type: 'boolean', value: false,
  description: 'Support JPG format')
option('support_fileformat_bmp', type: 'boolean', value: true,
  description: 'Support BMP format')
option('support_fileformat_hdr', type: 'boolean', value: false,
  description: 'Support HDR format')
option('support_fileformat_ktx', type: 'boolean', value: false,
  description: 'Support KTX format')
option('support_fileformat_astc', type: 'boolean', value: false,
  description: 'Support ASTC format')
option('support_fileformat_pvr', type: 'boolean', value: false,
  description: 'Support PVR format')
option('support_fileformat_obj', type: 'boolean', value: true,
  description: 'Support OBJ format')
option('support_fileformat_gltf', type: 'boolean', value: true,
  description: 'Support GLTF format')
option('support_fileformat_vox', type: 'boolean', value: true,
  description: 'Support VOX format')
option('support_fileformat_flac', type: 'boolean', value: false,
  description: 'Support FLAC format')
